--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -315,7 +315,7 @@ ul {
 		width: 30px;
 		height: 30px;
 		z-index: 9;
-		background: url(https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png) repeat;
+		background: url(../img/fondo.jpg) repeat;
     transform: rotate(45deg);
 	}
 	.cut2:before {
@@ -326,7 +326,7 @@ ul {
 	    width: 30px;
 	    height: 30px;
 	    z-index: 9;
-	    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png) repeat;
+	    background: url(../img/fondo.jpg) repeat;
       transform: rotate(45deg);
 	}
 	.content {
@@ -374,7 +374,7 @@ ul {
 			border-top-right-radius: 50px;
 			border-bottom-left-radius: 50px;
 		}
-		.social_icons .twitter:hover{
+		.social_icons .github:hover{
 			background: #00B0ED;
 			color: #fff;
 			border-top-left-radius: 50px;
